// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Tooltip AutoPlacement smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
        style="position: absolute; bottom: 4px; right: 4px;"
>
  Hover me
</button>
`;

exports[`components/Tooltip Default smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
>
  Hover me
</button>
`;

exports[`components/Tooltip Flip smoke-test 1`] = `
<button class="cmpui_button"
        data-variant="primary"
        data-size="M"
        style="position: absolute; bottom: 4px; transform: translateX(-50%);"
>
  Hover me
</button>
`;

exports[`components/Tooltip MultipleItems smoke-test 1`] = `
<div class="cmpui_icon-button__group">
  <button class="cmpui_icon-button__root"
          aria-selected="false"
          data-size="M"
          data-rounded="false"
          data-border="false"
  >
    <i class="ti ti-pointer">
    </i>
  </button>
  <button class="cmpui_icon-button__root"
          aria-selected="false"
          data-size="M"
          data-rounded="false"
          data-border="false"
  >
    <i class="ti ti-typography">
    </i>
  </button>
  <button class="cmpui_icon-button__root"
          aria-selected="false"
          data-size="M"
          data-rounded="false"
          data-border="false"
  >
    <i class="ti ti-italic">
    </i>
  </button>
</div>
`;
